# 2D-Space-Shooter

./: .gitignore  2D Space Shooter.sln  2D Space Shooter.vcxproj  2D Space Shooter.vcxproj.filters  CMakeLists.txt  README.md
rsc/: resourcedata.json  resourcedb.fbs
src/: Ability.cpp  Ability.h  Button.cpp  Button.h  Collider.cpp  Collider.h  Common.h  Constants.h  CustomiseMenu.cpp  CustomiseMenu.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Font.cpp  Font.h  Game.cpp  Game.h  Globals.h  Main.cpp  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  Movement.cpp  Movement.h  OptionsMenu.cpp  OptionsMenu.h  Pair.h  Particle.cpp  Particle.h  PickUp.cpp  PickUp.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Random.h  RenderSystem.cpp  RenderSystem.h  (+34 more)
src/Ability/: Ability.cpp  Ability.h
src/Common/: Common.h  Pair.h  Random.h
src/Entity/: Entity.cpp  Entity.h
src/Entity/Enemy/: Enemy.cpp  Enemy.h
src/Entity/Player/: Player.cpp  Player.h
src/Entity/WraithEnemy/: WraithEnemy.cpp  WraithEnemy.h
src/Game/: Game.cpp  Game.h
src/Menu/: Menu.cpp  Menu.h
src/Menu/CustomiseMenu/: CustomiseMenu.cpp  CustomiseMenu.h
src/Menu/MainMenu/: MainMenu.cpp  MainMenu.h
src/Menu/OptionsMenu/: OptionsMenu.cpp  OptionsMenu.h
src/Physics/Collider/: Collider.cpp  Collider.h
src/Physics/Movement/: Movement.cpp  Movement.h
src/PickUp/: PickUp.cpp  PickUp.h
src/Resource/: Resource.h  resourcedb_generated.h
src/Resource/Font/: Font.h
src/Resource/ResourceManager/: ResourceManager.cpp  ResourceManager.h
src/Resource/Sound/: Sound.h
src/Resource/Sprite/: Sprite.cpp  Sprite.h
src/Resource/Text/: Text.cpp  Text.h
src/Resource/Texture/: Texture.cpp  Texture.h
src/Ship/: Ship.cpp  Ship.h
src/Ship/ShipPart/: ShipPart.cpp  ShipPart.h
src/System/RenderSystem/: RenderSystem.cpp  RenderSystem.h
src/System/SoundSystem/: SoundSystem.cpp  SoundSystem.h
src/System/TextSystem/: TextSystem.cpp  TextSystem.h
src/System/TextureSystem/: TextureSystem.cpp  TextureSystem.h
src/Timer/: Timer.cpp  Timer.h
src/UI/: UI.cpp  UI.h
src/UI/Button/: Button.cpp  Button.h
src/UI/Widget/: Widget.cpp  Widget.h
src/Wave/: Wave.cpp  Wave.h
src/Weapon/: Weapon.cpp  Weapon.h
src/Window/: Window.cpp  Window.h
(+2 files in other folders)
